# alusin-studio

./: README.md  com.macipra.alusin.json  meson.build
build-aux/: com.macipra.alusin.yaml  run.sh.example
data/: com.macipra.alusin.desktop.in  com.macipra.alusin.gschema.xml  com.macipra.alusin.metainfo.xml.in  com.macipra.alusin.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: alusin-studio.gresource.xml  alusin-studio.in  canvas.py  canvas.ui  main.py  meson.build  style-dark.css  window.py  window.ui
